# dimorphite_dl

./: .coveragerc  .gitattributes  .gitignore  .isort.cfg  .markdownlint.yaml  .mypy.ini  .pytest.ini  .ruff.toml  .zenodo.json  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE.md  MANIFEST.in  README.md  dimorphite-dl.py  dimorphite_dl.py  mkdocs.yml  pixi.toml  protonate.py  protonation_functions.py  pyproject.toml  setup.py  site_substructures.smarts  test.smi
.github/workflows/: codecov.yml  docs.yml  tests.yml
dimorphite_dl/: __init__.py  cli.py  io.py  mol.py  neutralize.py  protect.py  protonate.py  substruct.py
dimorphite_dl/protonate/: __init__.py  change.py  data.py  detect.py  protonate.py  results.py  run.py  site.py  substruct.py
docs/: .nav.yml  development.md  gen_ref_pages.py
docs/.overrides/: main.html
docs/css/: base.css  colors.css
docs/js/: mathjax-config.js
hooks/: launchy.py
tests/: conftest.py  test_all.py  test_prot.py  test_smiles_io.py
tests/mol/: test_detect_substruct.py  test_neutralize.py
tests/protonate/: test_data.py  test_run.py
